Add validation for email field and layout fixes

--- a/example.html
+++ b/example.html
@@ -7,7 +7,10 @@
     <body>
         <h1 style="width: 100%; background: #ccc; display: block; padding: 20px 0; text-align: center;">Any web page loading a user survey</h1>
 
-        <div id="survey-root"></div>
+        <div
+            id="survey-root"
+            style="max-width: 400px; display: block; margin: 10px auto;"
+        ></div>
 
         <script type="text/javascript" src="./build/static/js/bundle.min.js"></script>
     </body>
